--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,7 +73,7 @@
                                             <nav class="level is-mobile">
                                                 <div class="level-right">
                                                     <div class="level-item">
-                                                        <a class="button is-sparta" onclick="change()">게시글 수정하기</a>
+                                                        <a class="button is-sparta" onclick="updateState(${id})">게시글 수정하기</a>
                                                     </div>
                                                     <div class="level-item">
                                                         <a class="button is-sparta" onclick="deletePost(${id})">게시글 삭제하기</a>
@@ -114,7 +114,68 @@
             });
         }
 
-        function change(id) {
+        function updateState(id) {
+            $("#update").addClass("is-active");
+            $.ajax({
+                type: 'GET',
+                url: `/api/posts/${id}`,
+                success: function (response) {
+                    let post = response;
+                    let title = post["title"];
+                    let username = post["username"];
+                    let contents = post["contents"];
+                    let tempHtml = `<div class="modal" id="update">
+                                    <div class="modal-background" onclick='$("#upload").removeClass("is-active")'></div>
+                                    <div class="modal-content">
+                                        <div class="box">
+                                            <article class="media">
+                                                <div class="media-content">
+                                                    <div class="field">
+                                                        <div class="row gx-4 gx-lg-5 align-items-center my-5">
+                                                            <textarea class="textarea" placeholder="제목" rows="1" id="update-title">${title}</textarea>
+                                                            <textarea class="textarea" placeholder="작성자" rows="1" id="update-username">${username}</textarea>
+                                                            <textarea class="textarea" placeholder="작성내용" rows="10" id="update-contents">${contents}</textarea>
+                                                        </div>
+                                                    </div>
+                                                    <nav class="level is-mobile">
+                                                        <div class="level-right">
+                                                            <div class="level-item">
+                                                                <a class="button is-sparta" onclick="updatePost(${id})">게시글 수정하기</a>
+                                                            </div>
+                                                            <div class="level-item">
+                                                                <a class="button is-sparta is-outlined"
+                                                                   onclick='$("#upload").removeClass("is-active")'>돌아가기</a>
+                                                            </div>
+                                                        </div>
+                                                    </nav>
+                                                </div>
+                                            </article>
+                                        </div>
+                                    </div>
+                                    <button class="modal-close is-large" aria-label="close"
+                                            onclick='$("#upload").removeClass("is-active")'></button>
+                                </div>`;
+                    $("#change").append(tempHtml);
+                }
+            })
+        }
+
+        function updatePost(id) {
+            let title = $("#update-title").val();
+            let username = $("#update-username").val();
+            let contents = $("#update-contents").val();
+
+            let data = {"title": title, "username": username, "contents": contents};
+            $.ajax({
+                type: "PUT",
+                url: `/api/posts/${id}`,
+                contentType: "application/json", // JSON 형식으로 전달함을 알리기
+                data: JSON.stringify(data),
+                success: function (response) {
+                    alert('게시글이 성공적으로 수정되었습니다.');
+                    window.location.reload();
+                }
+            });
         }
 
         function deletePost(id) {
@@ -234,6 +295,8 @@
         <button class="modal-close is-large" aria-label="close"
                 onclick='$("#upload").removeClass("is-active")'></button>
     </div>
+</section>
+<section id="change">
 </section>
 
 
